do not fail if there is no figures folder
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@990 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/Modelware_projects/modelware_documentations/src/docbook4.2/build.xml
+++ b/Modelware_projects/modelware_documentations/src/docbook4.2/build.xml
@@ -98,13 +98,13 @@
     	<copy todir="${project.base.dir}/build/docbook42/MTL_PluginUserManual">
     	    <fileset dir="MTL_PluginUserManual"/>
     	</copy>
-    	<copy todir="${project.base.dir}/build/figures">
+    	<copy todir="${project.base.dir}/build/figures" failonerror="false">
     	    <fileset dir="shared/figures"/>
     	</copy>
-    	<copy todir="${project.base.dir}/build/figures">
+    	<copy todir="${project.base.dir}/build/figures" failonerror="false">
     	    <fileset dir="MTL_UserManual/figures"/>
     	</copy>
-    	<copy todir="${project.base.dir}/build/figures">
+    	<copy todir="${project.base.dir}/build/figures" failonerror="false">
     	    <fileset dir="MTL_PluginUserManual/figures"/>
     	</copy>
 	</target>
