specification of the folder where java and tll files will be generated is now possible at the project level
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@1003 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/plugin.properties
+++ b/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/plugin.properties
@@ -3,7 +3,7 @@
 # Resource strings for the MTL Editor		#
 #											#
 #############################################
-
+# $Id: plugin.properties,v 1.3 2005-02-24 16:43:48 dvojtise Exp $
 pluginName=MTL Plugin
 ProjectName="MTL Plugin For Eclipse"
 
@@ -39,6 +39,8 @@ menu.newFile=Add MTL File
 menu.tooltip.newFile=Create a new MTL File
 menu.newFolder=Add MTL Folder
 menu.tooltip.newFolder=Create a new MTL Folder
+menu.generateAntFile=generate ant file
+menu.tooltip.generateAntFile=Create an ant file for this MTL build configuration
 
 
 
