--- a/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/src/org/inria/mtl/preferences/MTLMessages.properties
+++ b/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/src/org/inria/mtl/preferences/MTLMessages.properties
@@ -1,3 +1,7 @@
+# $Id: MTLMessages.properties,v 1.3 2005-02-24 16:43:51 dvojtise Exp $
+# authors: sdzale, dvojtise
+# Contains the messages and labels for the preference pages
+
 CompilerPreferencePage.description=Specify the location of the MTL Compiler.\n Location must be an absolute path.\n BasicMtlc.jar
 MTLCompilerConfiguration.location.label=MTL Compiler location
 MTLCompilerConfiguration.location.button=&Browse...
@@ -167,6 +171,11 @@ MultiMainTypeSelectionDialog.errorTitle=Error
 ## dnd
 ######
 LocalSelectionTransfer.errorMessage=Received wrong transfer data.
+
+
+
+
+
 
 ###########
 ## preferences
