--- a/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/src/org/inria/mtl/wizards/pages/TabMessages.properties
+++ b/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/src/org/inria/mtl/wizards/pages/TabMessages.properties
@@ -1,3 +1,6 @@
+# $Id: TabMessages.properties,v 1.3 2005-02-24 16:43:56 dvojtise Exp $
+# authors: sdzale, dvojtise
+# Contains the messages and labels for the wizard pages
 
 #---------------- Properties Wizard page -------------------
 LibrariesPage.libraries.addtll.button= Add TLLs ...
@@ -15,6 +18,10 @@ MainClassPage.label= Main class folder
 LibrariesWorkbookPage.tllDialog.new.title= Add a Tll File
 LibrariesWorkbookPage.tllDialog.new.description= Add a tll file in the project
 
+BuildPathsBlock.buildpath.label=Output folder for generated java files
+BuildPathsBlock.buildpath.button=Browse
+BuildPathsBlock.buildtllpath.label=Output folder for TLL files
+BuildPathsBlock.buildtllpath.button=Browse
 
 # ------- NewJavaProjectWizardPage------- 
 
