--- a/RepositoryDriver_projects/ModFactDriver/.project
+++ b/RepositoryDriver_projects/ModFactDriver/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ModFactDriver</name>
+	<name>org.inria.BasicMTL.ModFactDriver</name>
 	<comment></comment>
 	<projects>
 		<project>MDRDriver</project>
