--- a/BasicMTL_projects/org.inria.BasicMTL.runtime/build.xml
+++ b/BasicMTL_projects/org.inria.BasicMTL.runtime/build.xml
@@ -37,7 +37,7 @@
 		<antcall target="gather.bin.parts">
 			<param name="destination.temp.folder" value="${temp.folder}/"/>
 		</antcall>
-		<zip zipfile="${plugin.destination}/org.inria.BasicMTL.runtime_0.0.3.jar" basedir="${temp.folder}/org.inria.BasicMTL.runtime_0.0.3" filesonly="false" whenempty="skip" update="false"/>
+		<zip zipfile="${plugin.destination}/org.inria.BasicMTL.runtime_0.0.4.jar" basedir="${temp.folder}/org.inria.BasicMTL.runtime_0.0.4" filesonly="false" whenempty="skip" update="false"/>
 		<delete dir="${temp.folder}"/>
 	</target>
 
@@ -65,19 +65,19 @@
 				<pathelement path="ThirdParty/ModFact/v1_0_0/ANTLR4SimpleTRL.jar"/>
 				<pathelement path="ThirdParty/ModFact/v1_0_0/JMI1_0.jar"/>
 				<pathelement path="ThirdParty/ModFact/v1_0_0/JMIEngine.jar"/>
-				<pathelement path="ThirdParty/ModFact/v1_0_0/ModFactJmi.jar"/>
+				<pathelement path="ThirdParty/ModFact/v1_0_0/JMIRepository.jar"/>
 				<pathelement path="ThirdParty/ModFact/v1_0_0/ow_monolog.jar"/>
 				<pathelement path="ThirdParty/ModFact/v1_0_0/ow_utils_commandline.jar"/>
 				<pathelement path="ThirdParty/JUnit/junit.jar"/>
 				<pathelement path="ThirdParty/MDR/nbmdr.jar"/>
 			</classpath>
-			<src path="src/"			/>
-			<src path="build/src/"			/>
+			<src path="src/java/"			/>
+			<src path="build/src/java/"			/>
 			</javac>
 		<!-- Copy necessary resources -->
 		<copy todir="${temp.folder}/runtime.jar.bin" failonerror="true">
-			<fileset dir="src/" excludes="**/*.java, **/package.htm*"			/>
-			<fileset dir="build/src/" excludes="**/*.java, **/package.htm*"			/>
+			<fileset dir="src/java/" excludes="**/*.java, **/package.htm*"			/>
+			<fileset dir="build/src/java/" excludes="**/*.java, **/package.htm*"			/>
 		</copy>
 		<mkdir dir="${build.result.folder}"/>
 		<jar jarfile="${build.result.folder}/runtime.jar" basedir="${temp.folder}/runtime.jar.bin"/>
@@ -87,8 +87,8 @@
 	<target name="runtimesrc.zip" depends="init" unless="runtimesrc.zip">
 		<mkdir dir="${build.result.folder}"/>
 		<zip zipfile="${build.result.folder}/runtimesrc.zip" filesonly="false" whenempty="skip" update="false">
-			<fileset dir="src/" includes="**/*.java"			/>
-			<fileset dir="build/src/" includes="**/*.java"			/>
+			<fileset dir="src/java/" includes="**/*.java"			/>
+			<fileset dir="build/src/java/" includes="**/*.java"			/>
 		</zip>
 	</target>
 
@@ -103,11 +103,11 @@
 	</target>
 
 	<target name="gather.bin.parts" depends="init" if="destination.temp.folder">
-		<mkdir dir="${destination.temp.folder}/org.inria.BasicMTL.runtime_0.0.3"/>
-		<copy todir="${destination.temp.folder}/org.inria.BasicMTL.runtime_0.0.3" failonerror="true">
+		<mkdir dir="${destination.temp.folder}/org.inria.BasicMTL.runtime_0.0.4"/>
+		<copy todir="${destination.temp.folder}/org.inria.BasicMTL.runtime_0.0.4" failonerror="true">
 			<fileset dir="${build.result.folder}" includes="runtime.jar"			/>
 		</copy>
-		<copy todir="${destination.temp.folder}/org.inria.BasicMTL.runtime_0.0.3" failonerror="true">
+		<copy todir="${destination.temp.folder}/org.inria.BasicMTL.runtime_0.0.4" failonerror="true">
 			<fileset dir="${basedir}" includes="plugin.xml,runtime.jar,bin/,src/,ThirdParty/,build/,META-INF/,manifest/,log4j_configuration.xml"			/>
 		</copy>
 	</target>
@@ -116,20 +116,20 @@
 	</target>
 
 	<target name="gather.sources" depends="init" if="destination.temp.folder">
-		<mkdir dir="${destination.temp.folder}/org.inria.BasicMTL.runtime_0.0.3"/>
-		<copy file="${build.result.folder}/runtimesrc.zip" todir="${destination.temp.folder}/org.inria.BasicMTL.runtime_0.0.3" failonerror="false"/>
+		<mkdir dir="${destination.temp.folder}/org.inria.BasicMTL.runtime_0.0.4"/>
+		<copy file="${build.result.folder}/runtimesrc.zip" todir="${destination.temp.folder}/org.inria.BasicMTL.runtime_0.0.4" failonerror="false"/>
 	</target>
 
 	<target name="gather.logs" depends="init" if="destination.temp.folder">
-		<mkdir dir="${destination.temp.folder}/org.inria.BasicMTL.runtime_0.0.3"/>
-		<copy file="${temp.folder}/runtime.jar.bin.log" todir="${destination.temp.folder}/org.inria.BasicMTL.runtime_0.0.3" failonerror="false"/>
+		<mkdir dir="${destination.temp.folder}/org.inria.BasicMTL.runtime_0.0.4"/>
+		<copy file="${temp.folder}/runtime.jar.bin.log" todir="${destination.temp.folder}/org.inria.BasicMTL.runtime_0.0.4" failonerror="false"/>
 	</target>
 
 	<target name="clean" depends="init" description="Clean the plug-in: org.inria.BasicMTL.runtime of all the zips, jars and logs created.">
 		<delete file="${build.result.folder}/runtime.jar"/>
 		<delete file="${build.result.folder}/runtimesrc.zip"/>
-		<delete file="${plugin.destination}/org.inria.BasicMTL.runtime_0.0.3.jar"/>
-		<delete file="${plugin.destination}/org.inria.BasicMTL.runtime_0.0.3.zip"/>
+		<delete file="${plugin.destination}/org.inria.BasicMTL.runtime_0.0.4.jar"/>
+		<delete file="${plugin.destination}/org.inria.BasicMTL.runtime_0.0.4.zip"/>
 		<delete dir="${temp.folder}"/>
 	</target>
 
@@ -152,7 +152,7 @@
 		<delete>
 			<fileset dir="${temp.folder}" includes="**/*.bin.log"			/>
 		</delete>
-		<zip zipfile="${plugin.destination}/org.inria.BasicMTL.runtime_0.0.3.zip" basedir="${temp.folder}" filesonly="true" whenempty="skip" update="false"/>
+		<zip zipfile="${plugin.destination}/org.inria.BasicMTL.runtime_0.0.4.zip" basedir="${temp.folder}" filesonly="true" whenempty="skip" update="false"/>
 		<delete dir="${temp.folder}"/>
 	</target>
 
