support for output and output_tll in .mtlclasspath
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@1023 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/build.properties
+++ b/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/build.properties
@@ -13,7 +13,8 @@ bin.includes = plugin.xml,\
                MTL/bin/ThirdParty/log4j/,\
                MTL/bin/log4j_configuration.xml,\
                toc.xml,\
-               help/
+               help/,\
+               python/
 src.includes = src/,\
                bin/,\
                build.properties,\
