--- a/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/src/org/inria/mtl/wizards/pages/TabMessages.properties
+++ b/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/src/org/inria/mtl/wizards/pages/TabMessages.properties
@@ -1,4 +1,4 @@
-# $Id: TabMessages.properties,v 1.3 2005-02-24 16:43:56 dvojtise Exp $
+# $Id: TabMessages.properties,v 1.4 2005-02-28 15:41:29 dvojtise Exp $
 # authors: sdzale, dvojtise
 # Contains the messages and labels for the wizard pages
 
@@ -18,7 +18,7 @@ MainClassPage.label= Main class folder
 LibrariesWorkbookPage.tllDialog.new.title= Add a Tll File
 LibrariesWorkbookPage.tllDialog.new.description= Add a tll file in the project
 
-BuildPathsBlock.buildpath.label=Output folder for generated java files
+BuildPathsBlock.buildpath.label=Output folder for generated java files (make sure to update the Java Build Path source folders)
 BuildPathsBlock.buildpath.button=Browse
 BuildPathsBlock.buildtllpath.label=Output folder for TLL files
 BuildPathsBlock.buildtllpath.button=Browse
