--- a/UML1.4_projects/Statecharts/src/CodeGeneration/ant/build.xml
+++ b/UML1.4_projects/Statecharts/src/CodeGeneration/ant/build.xml
@@ -1,31 +1,20 @@
-<!-- $Id: build.xml,v 1.1 2004-10-06 09:34:07 fchauvel Exp $ -->
-<project name="Statecharts" default="run" basedir=".">
-	<description>
-	</description>
+<!-- $Id: build.xml,v 1.2 2005-03-02 13:34:49 fchauvel Exp $ -->
+<project name="Statecharts" default="run" basedir="..">
 	
   	<target name="compile" > 
   		<description>Compile the transformation</description>  
- 		<delete dir="build"></delete>   		
-  		<ant antfile="UML_utils_build.xml" dir="." target="compile"/>  		
-		<ant antfile="STL_build.xml" dir="." target="compile"/>
-  		<ant antfile="SCCodeGeneration_build.xml" dir="." target="compile"/>
-  		<ant antfile="Main_build.xml" dir="." target="compile"/>  				
+ 		<ant antfile="ant/UML_utils_build.xml" dir="." target="compile"/>  		
+		<ant antfile="ant/STL_build.xml" dir="." target="compile"/>
+  		<ant antfile="ant/SCCodeGeneration_build.xml" dir="." target="compile"/>
+  		<ant antfile="ant/Main_build.xml" dir="." target="compile"/>  				
  	</target> 
  	
  	<target name="run">
- 		<ant antfile="Main_build.xml" dir="." target="run"/>
+ 		<ant antfile="ant/Main_build.xml" dir="." target="run"/>
   	</target>
 
   	<target name="clean">
   		<delete dir="build"></delete>   		
  	</target>
- 	
- 	<target name="create_jar" 
-		description="create the jar file">
-		<jar destfile="./SCSemantic.jar">
-			<fileset dir="./build" excludes="./build/src/**"/>
-		</jar>
-	</target>	
- 	
  	
 </project>
