--- a/BasicMTL_projects/MTLDemo_MTIPClassRDBMS/.classpath
+++ b/BasicMTL_projects/MTLDemo_MTIPClassRDBMS/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="build/java"/>
+	<classpathentry kind="src" path="build/src/java"/>
 	<classpathentry kind="lib" path="C:/eclipse3.0.2/eclipse/plugins/org.inria.mtl_0.0.6/MTL/bin/BasicMTLruntime.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/eclipse3.0.2/eclipse/plugins/org.inria.mtl_0.0.6/MTL/bin/PoseidonDriver.jar"/>
